# numerical-linear-algebra

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  matrix.rs  vector.rs
